api/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: rng-widgets
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - name: redis
        image: redis:7-alpine
        resources:
          requests:
            memory: "10Mi"
            cpu: "0.25m"
          limits:
            memory: "16Mi"
            cpu: "0.5m"
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 6379
          protocol: TCP
