api/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: rng-widgets
spec:
  type: ClusterIP
  selector:
    app: rng-gke-sql-app
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
